# RaidAssist

./: .env.example  .gitignore  CI_FIX_SUMMARY.md  LICENSE  README.md  auth_server.py  debug_api.py  dev-requirements.txt  localhost-key.pem  localhost.pem  main.py  pyproject.toml  raidassist.spec  requirements.txt  roadmap.yaml  test_ci_fix_validation.py  test_search_fix.py  test_user_experience.py  update_credentials.py  verify_oauth_setup.py
.github/: dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-gh-pages.yml  build-windows-exe.yml  codeql.yml  dependency-graph.yml  greetings.yml  label.yml  python-tests.yml  summary.yml
api/: __init__.py  bungie.py  exotics.py  manifest.py  oauth.py  parse_profile.py
assets/: style.css  style.qss
docs/: OAUTH_SETUP.md
docs/repo/: CHANGELOG.md  CODE_OF_CONDUCT.md  COLLABORATION.md  CONTRIBUTING.md  CONTRIBUTORS.md  DEV_SETUP.md  ROADMAP.md
logs/: error_details_20250715_101249.json  error_details_20250715_101836.json  error_details_20250715_102235.json  error_details_20250715_102645.json  error_details_20250715_120228.json  error_details_20250716_123000.json  error_details_20250716_123121.json
tests/: conftest.py  pytest.ini  run_tests.py  test_bungie.py  test_enhanced_systems.py  test_exotics.py  test_manifest.py  test_oauth_pkce.py  test_parse_profile.py  test_settings.py  test_systems.py
ui/: __init__.py  advanced_overlay.py  api_tester.py  interface.py  loading.py  overlay.py  settings.py
utils/: __init__.py  error_handler.py  logging_manager.py
